--- a/hrapp/templates/hrapp/main.html
+++ b/hrapp/templates/hrapp/main.html
@@ -19,10 +19,12 @@
         <div class="col-md-3"></div>
         <div class="col-md-6" id="mid-col">
             <br>
+            <br>
+            <br>
             <div id="main-heading">
                 <span id="title">Tweeter</span>
                 <br>
-                <span id="subtitle">A Twitter Hashtag Recommendation Engine</span>
+                <span id="subtitle">A Twitter <span id="special">#hashtag</span> Recommendation Engine</span>
             </div>
             <br>
             <br>
@@ -30,7 +32,7 @@
                 <textarea id="tweet-area" class="form-control" rows="2" placeholder="Enter a tweet"></textarea>
                 <br>
                 <div class="text-right">
-                    <button id="tweet-btn" class="btn btn-default">Recommend Me</button>
+                    <button id="tweet-btn" class="btn btn-warning">Recommend Me</button>
                 </div>        
             </div>
 
